--- a/css/anmeldelser.css
+++ b/css/anmeldelser.css
@@ -20,7 +20,7 @@
 }
 
 .logo{
-    width: 20%;
+    width: 30%;
     height: auto;
     justify-content: center;
     z-index: -1;
@@ -173,13 +173,13 @@ p{
 .billede1{
     width: 100%;
     height: auto;
-    padding-top: 10%;
+    padding-top: 20%;
     opacity: 0.4;
 }
 
 .tekst1{
     position: absolute;
-    top: 60%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
@@ -294,10 +294,6 @@ p{
     header {
         padding: 20px;
     }
-    
-    header {
-        padding: 20px;
-    }
 
     header label {
         display: flex;
@@ -355,7 +351,7 @@ p{
     }
 
     .tekst1{
-    padding-top: 20%;
+    padding-top: 10%;
     width: 80%;
     }
 
@@ -437,7 +433,7 @@ p{
         }
     
     .tekst1{
-        padding-top: 20%;
+        padding-top: 5%;
         width: 80%;
     }
 
@@ -498,9 +494,17 @@ main{
 }
 
 .some{
-    color: var(--Rød);
     display: flex;
-    padding: 2%;
-    font-size: 5vh;
-    justify-content: end;
-}
+    justify-content: right;
+    width: 15%;
+    height: auto;
+    float: right;
+    padding-right: 2%;
+    align-items: center;
+    }
+    
+    a img{
+        width: 50px;
+        height: auto;
+        padding: 3%;
+    }
