--- a/css/historie.css
+++ b/css/historie.css
@@ -20,7 +20,7 @@
 }
 
 .logo{
-    width: 20%;
+    width: 40%;
     height: auto;
     justify-content: center;
     z-index: -1;
@@ -63,8 +63,6 @@ header {
     z-index: 1000;
     text-transform: uppercase;
 }
-
-
 
 #menu-bar {
     display: none;
@@ -143,16 +141,10 @@ header label {
     cursor: pointer;
 }
 
-header label {
-    font-size: 10vh;
-    color: var(--Rød);
-    cursor: pointer;
-    display: none;
-}
-
-.container{
+.indhold_container{
     display: block;
     justify-content: space-between;
+    padding-top: 5%;
 }
 
 .container_1{
@@ -169,7 +161,7 @@ header label {
 }
 
 .container_3{
-    display: block;
+    display: flex;
     padding: 2%;
     width: 50%;
 }
@@ -215,9 +207,10 @@ p{
 }
 
 .synge_mand{
-    width: 50%;
-    height: auto;
+    width: auto;
+    height: 100%;
     padding-left: 20%;
+    padding-top: 10%;
 }
 
 /*Tablet størrelse*/
@@ -262,13 +255,6 @@ p{
         height: auto;
     }
 
-    .some{
-        color: var(--Rød);
-        display: flex;
-        padding: 2%;
-        font-size: 4vh;
-        justify-content: end;
-    }
 }
 
 /* telefonstørrelse */
@@ -288,9 +274,17 @@ main{
 }
 
 .some{
-    color: var(--Rød);
     display: flex;
-    padding: 2%;
-    font-size: 5vh;
-    justify-content: end;
-}
+    justify-content: right;
+    width: 15%;
+    height: auto;
+    float: right;
+    padding-right: 2%;
+    align-items: center;
+    }
+    
+    a img{
+        width: 50px;
+        height: auto;
+        padding: 3%;
+    }
