--- a/css/historie.css
+++ b/css/historie.css
@@ -154,10 +154,10 @@ header label {
 }
 
 .container_2{
-  display: flex; 
-  justify-content: space-around; 
+  display: flex;
+  justify-content: space-around;
   width: 100%;
-  align-items: center;
+  padding-left: 20%;
 }
 
 .container_3{
@@ -255,6 +255,35 @@ p{
         height: auto;
     }
 
+    .synge_mand{
+    width: auto;
+    height: 100%;
+    }
+
+    .mand_med_trumpet{
+        width: auto;
+        height: 50%;
+        gap: 5%;
+    }
+
+    .container_1{
+        display: block;
+        justify-content: center;
+        width: 90%;
+        padding-left: 20%;
+    }
+
+    .container_2{
+        display: flex;
+        width: 100%;
+        padding-right: 10%;
+    }
+
+    .container_3{
+        display: block;
+        width: 100%;
+    }
+
 }
 
 /* telefonstørrelse */
@@ -265,6 +294,15 @@ p{
         font-size: 5vh;
         margin-top: 10%;
         margin-left: -10%;
+    }
+
+    h1{
+        padding-top: 25%;
+        text-align: center;
+    }
+
+    .container_2{
+        display: block;
     }
 }
 
