--- a/css/anmeldelser.css
+++ b/css/anmeldelser.css
@@ -184,7 +184,7 @@ iframe {
 
 .tekst1{
     position: absolute;
-    top: 70%;
+    top: 75%;
     left: 50%;
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
@@ -205,7 +205,7 @@ iframe {
 
 .tekst2{
     position: absolute;
-    top: 30%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
@@ -226,7 +226,7 @@ iframe {
 
 .tekst3{
     position: absolute;
-    top: 30%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
@@ -247,7 +247,7 @@ iframe {
 
 .tekst4{
     position: absolute;
-    top: 30%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
@@ -268,7 +268,7 @@ iframe {
 
 .tekst5{
     position: absolute;
-    top: 30%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
@@ -289,7 +289,7 @@ iframe {
 
 .tekst6{
     position: absolute;
-    top: 30%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
@@ -362,10 +362,11 @@ iframe {
     }
 
     .tekst1{
-    padding-top: 10%;
+   padding-top: 5%;
     width: 80%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    text-align: left;
     }
 
     .billede2{
@@ -374,7 +375,11 @@ iframe {
     }
     
     .tekst2{
-    width: 80%;
+        padding-top: 5%;
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
     }
 
     .billede3{
@@ -383,7 +388,11 @@ iframe {
     }
         
     .tekst3{
-    width: 80%;
+        padding-top: 5%;
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
     }
 
     .billede4{
@@ -392,7 +401,11 @@ iframe {
     }
             
     .tekst4{
-    width: 80%;
+        padding-top: 5%;
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
     }
 
     .billede5{
@@ -401,7 +414,11 @@ iframe {
     }
             
     .tekst5{
-    width: 80%;
+        padding-top: 5%;
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
     }
 
     .billede6{
@@ -410,7 +427,11 @@ iframe {
     }
             
     .tekst6{
-    width: 80%;
+        padding-top: 5%;
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
     }
 }
 
@@ -429,8 +450,8 @@ iframe {
     h1{
         text-transform: uppercase;
         font-weight: 600;
-        font-size: 2vh;
-        padding-top: 5%;
+        font-size: 1.7vh;
+        padding-top: 2%;
     }
     
     p{
@@ -441,63 +462,69 @@ iframe {
 
     .billede1{
         width: 100%;
-        height: 400px;
+        height: 300px;
         padding-top: 30%;
         }
     
     .tekst1{
-        padding-top: 5%;
-        width: 80%;
+        padding-top: 2%;
+        width: 100%;
+        display: block;
     }
 
     .billede2{
         width: 100%;
-        height: 200px;
+        height: 150px;
         }
     
     .tekst2{
-        width: 80%;
-        padding-top: 5%;
+        padding-top: 8%;
+        width: 100%;
+        display: block;
     }
 
     .billede3{
     width: 100%;
-    height: 200px;
+    height: 150px;
     }
     
     .tekst3{
-    width: 80%;
-    padding-top: 5%;
+    padding-top: 8%;
+    width: 100%;
+    display: block;
     }
 
     .billede4{
     width: 100%;
-    height: 200px;
+    height: 150px;
     }
         
     .tekst4{
-    width: 80%;
-    padding-top: 20%;
+    padding-top: 8%;
+    width: 100%;
+    display: block;
     }
 
     .billede5{
     width: 100%;
-    height: 200px;
+    height: 150px;
     }
             
     .tekst5{
-    width: 80%;
-    padding-top: 5%;
+    padding-top: 8%;
+    width: 100%;
+    display: block;
     }
 
     .billede6{
     width: 100%;
-    height: 200px;
+    height: 150px;
     }
             
     .tekst6{
-    width: 80%;
-    padding-top: 5%;
+    padding-top: 8%;
+    width: 100%;
+    display: block;
     }
 }
 
