--- a/css/anmeldelser.css
+++ b/css/anmeldelser.css
@@ -8,24 +8,29 @@
     --Sort: #000000;
 }
 
+/*Styling af body*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/*Navigationsbar*/
+/*Det var ikke mulig for mig at en lodret menubar, uden af undermenerne lagde sig under hinanden, derfor lavede jeg i stedet dropdown 
+menuer, til hvert enkelt menupunkt. På dem måde ville jeg komme tætteste på mine mockups, samt gøre det tydeligt hvad der ligger under
+de forskellige menupunkter */
 .navcontainer{
     display: flex;
     justify-content: space-between;
 }
 
+/*Størrelse på logo*/
 .logo{
     width: 30%;
     height: auto;
     justify-content: center;
     z-index: -1;
 }
-
 
 /*Gennemsigtig baggrund*/
 /*ChaGPT: "Kan jeg gøre baggrundsbilledet gennemsigtigt?" https://chatgpt.com/share/6756eeed-cec0-8009-94c3-72717e26b2d3*/
@@ -49,6 +54,7 @@ body::before {
     z-index: -1;
 }
 
+/*Generelt styling af header*/
 header {
     position: fixed;
     top:0;
@@ -63,11 +69,12 @@ header {
     text-transform: uppercase;
 }
 
-
+/*Burgermenu label, der ikke vises ved større skærme*/
 #menu-bar {
     display: none;
 }
 
+/*Styling burgermenu label*/
 header label {
     font-size: 10vh;
     color: var(--Rød);
@@ -75,12 +82,13 @@ header label {
     display: none;
 }
 
-
+/*Flex column, så undermenuerne lægger sig under hinanden*/
 .container{
     display: flex;
     flex-direction: column;
 }
 
+/*Styling af undermenuer*/
 .dropbtn {
     background-color: var(--Beige);
     color: var(--Rød);
@@ -93,12 +101,14 @@ header label {
     cursor: pointer;
   }
   
+/*placering*/
   .dropdown {
     position: relative;
     display: inline-block;
     text-align: right;
   }
-  
+
+/*Styling af undermenupunkter*/
   .dropdown-content {
     display: none;
     position: absolute;
@@ -109,6 +119,7 @@ header label {
     z-index: 1;
   }
   
+/*Styling af undermenupunkter*/
   .dropdown-content a {
     color: var(--Rød);
     padding: 12px 16px;
@@ -120,35 +131,22 @@ header label {
     display: block;
   }
   
+/*Gør teksten gul ved hover*/
   .dropdown-content a:hover {
     color: var(--Gul);
 }
   
+/*Blocker ved hover*/
   .dropdown:hover .dropdown-content {
     display: block;
   }
   
+/*Gør teksten gul ved hover*/
   .dropdown:hover .dropbtn {
     color: var(--Gul);
   }
 
-  #menu-bar {
-    display: none;
-}
-
-.menu-icon {
-    display: none;
-    cursor: pointer;
-}
-
-
-header label {
-    font-size: 10vh;
-    color: var(--Rød);
-    cursor: pointer;
-    display: none;
-}
-
+/*Styling af overskrift*/
 h1{
     text-transform: uppercase;
     font-weight: 600;
@@ -156,11 +154,20 @@ h1{
     padding-top: 5%;
 }
 
+/*Styling af tekststykke*/
 p{
     font-size: 2vh;
     font-weight: 400;
 }
 
+/*Styling af musik-knap er fra spotify - her bestemmes placeringen */
+iframe {
+    padding-top: 3%;
+    width: 100%;
+    max-width: 300px;
+}
+
+/*Styling af sektion med billede og tekst*/
 .section1 {
     position: relative;
     text-align: center;
@@ -169,12 +176,7 @@ p{
     height: auto;
 }
 
-iframe {
-    padding-top: 3%;
-    width: 100%;
-    max-width: 300px;
-}
-
+/*Styling af billede*/
 .billede1{
     width: 100%;
     height: auto;
@@ -182,6 +184,7 @@ iframe {
     opacity: 0.4;
 }
 
+/*Placering på tekst*/
 .tekst1{
     position: absolute;
     top: 75%;
@@ -189,6 +192,7 @@ iframe {
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
 
+/*Styling af sektion med billede og tekst*/
 .section2 {
     position: relative;
     text-align: center;
@@ -197,12 +201,14 @@ iframe {
     height: auto;
 }
 
+/*Styling af billede*/
 .billede2{
     width: 100%;
     height: auto;
     opacity: 0.4;
 }
 
+/*Placering på tekst*/
 .tekst2{
     position: absolute;
     top: 55%;
@@ -210,6 +216,7 @@ iframe {
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
 
+/*Styling af sektion med billede og tekst*/
 .section3 {
     position: relative;
     text-align: center;
@@ -218,12 +225,14 @@ iframe {
     height: auto;
 }
 
+/*Styling af billede*/
 .billede3{
     width: 100%;
     height: auto;
     opacity: 0.4;
 }
 
+/*Placering på tekst*/
 .tekst3{
     position: absolute;
     top: 55%;
@@ -231,6 +240,7 @@ iframe {
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
 
+/*Styling af sektion med billede og tekst*/
 .section4 {
     position: relative;
     text-align: center;
@@ -239,12 +249,14 @@ iframe {
     height: auto;
 }
 
+/*Styling af billede*/
 .billede4{
     width: 100%;
     height: auto;
     opacity: 0.4;
 }
 
+/*Placering på tekst*/
 .tekst4{
     position: absolute;
     top: 55%;
@@ -252,6 +264,7 @@ iframe {
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
 
+/*Styling af sektion med billede og tekst*/
 .section5{
     position: relative;
     text-align: center;
@@ -260,12 +273,14 @@ iframe {
     height: auto;
 }
 
+/*Styling af billede*/
 .billede5{
     width: 100%;
     height: auto;
     opacity: 0.4;
 }
 
+/*Placering på tekst*/
 .tekst5{
     position: absolute;
     top: 55%;
@@ -273,6 +288,7 @@ iframe {
     transform: translate(-50%, -50%); /* Justerer for centreringsforskydning */
 }
 
+/*Styling af sektion med billede og tekst*/
 .section6 {
     position: relative;
     text-align: center;
@@ -281,12 +297,14 @@ iframe {
     height: auto;
 }
 
+/*Styling af billede*/
 .billede6{
     width: 100%;
     height: auto;
     opacity: 0.4;
 }
 
+/*Placering på tekst*/
 .tekst6{
     position: absolute;
     top: 55%;
@@ -300,6 +318,7 @@ iframe {
         padding: 20px;
     }
 
+/*Viser label i stedet for menupunkter ved mindre skærme*/
     header label {
         display: flex;
         float: right;
@@ -307,11 +326,8 @@ iframe {
         margin-top: 2%;
         margin-right: 10%;
     }
-    
-    .menu-icon {
-        display: block;
-    }
 
+/*Styling af menuer under label*/
     .container {
         display: none;
         flex-direction: column;
@@ -331,11 +347,13 @@ iframe {
         display: flex;
     }
 
+/*En smule mindre logo*/
     .logo{
         width: 40%;
         height: auto;
     }
 
+/*Styling af overskrifter*/
     h1{
         text-transform: uppercase;
         font-weight: 600;
@@ -343,37 +361,43 @@ iframe {
         padding-top: 1%;
     }
     
+/*Styling af tekststykke*/
     p{
         font-size: 1.5vh;
         font-weight: 400;
         padding-top: 2%;
     }
 
+/*Placering af musik-knap*/
     iframe {
         padding-top: 3%;
         width: 100%;
         max-width: 300px;
     }
 
+/*Justering af billedets størrelse*/
     .billede1{
     width: 100%;
     height: auto;
     padding-top: 30%;
     }
 
+/*placere tekst og musik-knap ved siden af hinanden*/
     .tekst1{
-   padding-top: 5%;
+    padding-top: 5%;
     width: 80%;
     display: flex;
     justify-content: space-between;
     text-align: left;
     }
 
+/*Justering af billedets størrelse*/
     .billede2{
     width: 100%;
     height: auto;
     }
     
+/*placere tekst og musik-knap ved siden af hinanden*/
     .tekst2{
         padding-top: 5%;
         width: 80%;
@@ -382,11 +406,13 @@ iframe {
         text-align: left;
     }
 
+/*Justering af billedets størrelse*/
     .billede3{
     width: 100%;
     height: auto;
     }
-        
+    
+/*placere tekst og musik-knap ved siden af hinanden*/
     .tekst3{
         padding-top: 5%;
         width: 80%;
@@ -395,11 +421,13 @@ iframe {
         text-align: left;
     }
 
+/*Justering af billedets størrelse*/
     .billede4{
     width: 100%;
     height: auto;
     }
             
+/*placere tekst og musik-knap ved siden af hinanden*/
     .tekst4{
         padding-top: 5%;
         width: 80%;
@@ -408,11 +436,13 @@ iframe {
         text-align: left;
     }
 
+/*Justering af billedets størrelse*/
     .billede5{
     width: 100%;
     height: auto;
     }
-            
+           
+/*placere tekst og musik-knap ved siden af hinanden*/
     .tekst5{
         padding-top: 5%;
         width: 80%;
@@ -421,11 +451,13 @@ iframe {
         text-align: left;
     }
 
+/*Justering af billedets størrelse*/
     .billede6{
     width: 100%;
     height: auto;
     }
-            
+          
+/*placere tekst og musik-knap ved siden af hinanden*/
     .tekst6{
         padding-top: 5%;
         width: 80%;
@@ -447,25 +479,29 @@ iframe {
         margin-right: 10%;
     }
 
+/*Tilpasser overskrifter størrelse*/
     h1{
         text-transform: uppercase;
         font-weight: 600;
         font-size: 1.7vh;
         padding-top: 2%;
     }
-    
+   
+/*Tilpasser tekststørrelse */
     p{
         font-size: 1.5vh;
         font-weight: 400;
         padding-top: 1%;
     }
 
+/*Justerer billedets størrelse*/
     .billede1{
         width: 100%;
         height: 300px;
         padding-top: 30%;
         }
     
+/*Placerer tekst og billede ovenover hinanden*/
     .tekst1{
         padding-top: 2%;
         width: 100%;
@@ -533,6 +569,7 @@ main{
     min-height: 90vh;
 }
 
+/*Styling af footer med sociale mediekanaler*/
 .some{
     display: flex;
     justify-content: right;
@@ -542,7 +579,8 @@ main{
     padding-right: 2%;
     align-items: center;
     }
-    
+
+/*Styling af sociale medie ikoner*/
     a img{
         width: 50px;
         height: auto;
