--- a/css/kunstnere.css
+++ b/css/kunstnere.css
@@ -198,6 +198,7 @@ font-size: 3vh;
 color: var(--Rød);
 }
 
+
 /*Tekst og billede ved siden af hinanden*/
 .kunstner_2{
     display: flex;
@@ -245,6 +246,110 @@ padding-left: 2%;
     display: flex;
     justify-content:left;
     padding-left: 23%;
+    font-size: 3vh;
+    color: var(--Rød);
+    }
+
+/*Tekst og billede ved siden af hinanden*/
+.gaest_1{
+    display: flex;
+    justify-content: space-between;
+    padding: 2%;
+    padding-left: 15%;
+    padding-right: 15%;
+    text-align: right;
+}
+
+/*Styling af billede*/
+.gaest1{
+width: 30%;
+height: auto;
+padding-left: 2%;
+}
+
+/*Styling af hjerternes*/
+.hjerte1{
+display: flex;
+justify-content:left;
+padding-left: 23%;
+font-size: 3vh;
+color: var(--Rød);
+}
+
+
+/*Tekst og billede ved siden af hinanden*/
+.gaest_2{
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+/*Styling af billede*/
+.gaest2{
+width: 30%;
+height: auto;
+padding-left: 2%;
+}
+
+/*Styling af hjerterne*/
+.hjerte2{
+    display: flex;
+    justify-content:left;
+    padding-left: 65%;
+    font-size: 3vh;
+    color: var(--Rød);
+    }
+
+    /*Tekst og billede ved siden af hinanden*/
+.gaest_3{
+    display: flex;
+    justify-content: space-between;
+    padding: 2%;
+    padding-left: 15%;
+    padding-right: 15%;
+    text-align: right;
+}
+
+/*Styling af billede*/
+.gaest3{
+width: 30%;
+height: auto;
+padding-left: 2%;
+}
+
+/*Styling af hjerternes*/
+.hjerte3{
+display: flex;
+justify-content:left;
+padding-left: 23%;
+font-size: 3vh;
+color: var(--Rød);
+}
+
+
+/*Tekst og billede ved siden af hinanden*/
+.gaest_4{
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+/*Styling af billede*/
+.gaest4{
+width: 30%;
+height: auto;
+padding-left: 2%;
+}
+
+/*Styling af hjerterne*/
+.hjerte4{
+    display: flex;
+    justify-content:left;
+    padding-left: 65%;
     font-size: 3vh;
     color: var(--Rød);
     }
